# stray

./: .gitignore  CMakeLists.txt  LICENSE  README.md  sdkconfig  sdkconfig.old
components/bsp/: CMakeLists.txt  Kconfig  bsp_stray_v1.c
components/bsp/include/: bsp.h
components/common_defs/include/: shared_resources.h  udp_protocol.h
components/fs/: CMakeLists.txt  fs.c  nvs_manager.c
components/fs/include/: fs.h  nvs_manager.h
components/hal_audio/: CMakeLists.txt  hal_audio.c
components/hal_audio/include/: hal_audio.h
components/hal_display/: CMakeLists.txt  hal_display.c  hal_display_helpers.c  hal_display_logic.c  idf_component.yml
components/hal_display/include/: hal_display.h  hal_display_helpers.h  hal_display_logic.h
components/hal_display/ui/: CMakeLists.txt  base.sll  base.spj  base_events.py  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h
components/hal_display/ui/components/: ui_comp_hook.c
components/hal_display/ui/images/: ui_img_rx_png.c  ui_img_trans_png.c  ui_img_tx_png.c  ui_img_wifi_png.c
components/hal_display/ui/screens/: ui_screenmain_.c  ui_screenmain_.h
components/hal_i2c_bus/: CMakeLists.txt  hal_i2c_bus.c
components/hal_i2c_bus/include/: hal_i2c_bus.h
components/hal_input/: CMakeLists.txt  hal_encoder.c  hal_input.c
components/hal_net/: CMakeLists.txt  Kconfig  hal_net.c  hal_sntp.c  wifi_provisioning.c
components/lan_task/: CMakeLists.txt  lan_task.c  peer_manager.c
data_4_upload/: settings.json
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
(+7 files in other folders)
